# python-djangorestframework-module

./: .env  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
apps/pizza/: filter.py  managers.py  models.py  serializers.py  urls.py  views.py
apps/pizza/migrations/: 0001_initial.py  0002_pizzamodel_pizza_shop.py
apps/pizza_shop/: serializer.py  urls.py
apps/users/: managers.py  models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
backend/: celerybeat-schedule-shm  celerybeat-schedule-wal
backend/apps/auth/: serializers.py  urls.py  views.py
backend/apps/chat/: consumers.py  models.py
backend/apps/pizza/: consumers.py  filter.py  models.py  routing.py  serializers.py  service.py  urls.py  views.py
backend/apps/pizza_shop/: views.py
backend/apps/users/: models.py  permissions.py  serializers.py  urls.py  views.py
backend/configs/: asgi.py  celery.py  routing.py  settings.py  urls.py
backend/configs/extra_conf/: celery_conf.py  rest_conf.py
backend/core/: pagination.py
backend/templates/: recovery.html  register.html  spam.html  test_email.html
client/: asset-manifest.json  index.html
configs/: settings.py  urls.py
configs/extra_conf/: rest_conf.py
core/: models.py
first/: views.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.js  router.js
pizza/: models.py  serializers.py  views.py
pizza/migrations/: 0001_initial.py
users/: models.py  serializers.py  views.py
users/migrations/: 0001_initial.py
(+37 files in other folders)
